# typst-concealer

./: .gitignore  README.md  todo.txt
lua/typst-concealer/: apply.lua  cursor-visibility.lua  extmark.lua  init.lua  path-rewrite.lua  plan.lua  png-lua.lua  project-scope.lua  render.lua  semantics.lua  session.lua  state.lua  workspace.lua  wrapper.lua
lua/typst-concealer/backends/latex/: init.lua  preview.lua  semantics.lua  session.lua  units.lua  wrapper.lua
lua/typst-concealer/backends/typst/: init.lua  preview.lua  semantics.lua  session.lua  units.lua  wrapper.lua
lua/typst-concealer/machine/: effects.lua  reducer.lua  resources.lua  runtime.lua  types.lua
service/: Cargo.toml
service/src/: compiler.rs  main.rs  protocol.rs  world.rs
tests/: bench.sh  bench_service.lua  bench_service.py  run.lua
